# -Django-membership_project

./: db.sqlite3  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
addresses/: admin.py  models.py  serializers.py  urls.py  views.py
addresses/migrations/: 0001_initial.py
config/: settings.py  urls.py
